# Parallel-Computing-2

./: CMakeLists.txt  Makefile  README.md  Visualisation.ipynb  fp_ex.c  inn_prod_ex.c  inner_prod.h  integrals.cpp  mat_alloc.h  mat_alloc_ex.c  montecarlo.c  montecarlo_false_sharing.c  montecarlo_false_sharing_try_fix.c  montecarlo_no_false_sharing.c  montecarlo_parallel.c  montecarlo_serial.c  scoping_experiment_1.c  scoping_experiment_2.c  single_if_ex.c  thread_num_ex.c  vec_add.c  vec_add.h  vec_alloc_ex.c
vector_inc/: Makefile  run.sh  vadd  vadd.cu
